// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden palettes > black, exact 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eaeaea",
        "#d7d7d7",
        "#c1c1c1",
        "#a4a4a4",
        "#848484",
        "#636363",
        "#434343",
        "#2d2d2d",
        "#1a1a1a",
        "#000000 (seed)",
      ],
      "hue": null,
      "name": "primary",
      "seed": {
        "input": "#000000",
        "magnitude": "large",
        "mode": "exact",
        "slot": 950,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b2b2b2",
        "#949494",
        "#767676",
        "#585858",
        "#444444",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eafeed",
        "#cbf9d3",
        "#9df2af",
        "#65e488",
        "#26cc65",
        "#1eaa53",
        "#178841",
        "#116630",
        "#0e4e24",
        "#0b3b1b",
        "#072711",
      ],
      "hue": 150,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b1",
        "#fcc17b",
        "#f4a023",
        "#cc851b",
        "#a36a15",
        "#7b4f0f",
        "#5f3d0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbdb4",
        "#fc978c",
        "#fb6157",
        "#e71f25",
        "#af181b",
        "#881415",
        "#66100f",
        "#470a09",
      ],
      "hue": 27,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fafe",
        "#ddf1fe",
        "#bee4fd",
        "#94d4fc",
        "#4cbcfb",
        "#1e9edc",
        "#177eb0",
        "#115e84",
        "#0e4866",
        "#0b364d",
        "#072434",
      ],
      "hue": 237,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.51:1, Lc 16",
    "4: 2.00:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.29:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 12.02:1, Lc 92",
    "10: 15.09:1, Lc 98",
  ],
  "suggestions": [],
  "warnings": [
    "NO_HUE",
    "SEED_AT_RAMP_END",
    "SEED_WARP_STRAIN",
  ],
}
`;

exports[`golden palettes > blurple, exact 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#e9ecfe",
        "#d6dcfe",
        "#bfc7fe",
        "#a0a9ff",
        "#7f86ff",
        "#635bff (seed)",
        "#5017fc",
        "#3d14c5",
        "#2c1493",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "primary",
      "seed": {
        "input": "#635bff",
        "magnitude": "subtle",
        "mode": "exact",
        "slot": 600,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddee9",
        "#cacbd6",
        "#b0b2bc",
        "#92949e",
        "#74767f",
        "#565860",
        "#42434c",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#e6fef3",
        "#bffbdf",
        "#83f4c6",
        "#30e6ab",
        "#27c995",
        "#1ea87c",
        "#178662",
        "#126449",
        "#0e4d38",
        "#0b3a29",
        "#07271b",
      ],
      "hue": 165,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f3",
        "#feeade",
        "#fdd8bf",
        "#fcbf96",
        "#fc9b53",
        "#e1791b",
        "#b46015",
        "#884710",
        "#69370d",
        "#4f2909",
        "#361b06",
      ],
      "hue": 55,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd5d9",
        "#fdbbc2",
        "#fc94a2",
        "#fb5d7c",
        "#e41e5a",
        "#ac1743",
        "#861333",
        "#650f26",
        "#450a19",
      ],
      "hue": 12,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e3effe",
        "#c9e1fd",
        "#a8d0fc",
        "#78b6fb",
        "#3497fa",
        "#1678d1",
        "#105a9d",
        "#0d457a",
        "#0a335c",
        "#06223f",
      ],
      "hue": 252,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 30",
    "5: 2.85:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.69:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 11.98:1, Lc 92",
    "10: 15.05:1, Lc 98",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [],
}
`;

exports[`golden palettes > blurple, harmonize 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#eaedfe",
        "#d8ddfd",
        "#c2c9fc",
        "#a4adfb",
        "#838afa",
        "#6561f8",
        "#4f29f4",
        "#3d1cc2",
        "#2d1793",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "primary",
      "seed": {
        "input": "#635bff",
        "magnitude": "subtle",
        "mode": "harmonize",
        "slot": 600,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddee9",
        "#cacbd6",
        "#b0b2bc",
        "#92949e",
        "#74767f",
        "#565860",
        "#42434c",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#e6fef3",
        "#bffbdf",
        "#83f4c6",
        "#30e6ab",
        "#27c995",
        "#1ea87c",
        "#178662",
        "#126449",
        "#0e4d38",
        "#0b3a29",
        "#07271b",
      ],
      "hue": 165,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f3",
        "#feeade",
        "#fdd8bf",
        "#fcbf96",
        "#fc9b53",
        "#e1791b",
        "#b46015",
        "#884710",
        "#69370d",
        "#4f2909",
        "#361b06",
      ],
      "hue": 55,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd5d9",
        "#fdbbc2",
        "#fc94a2",
        "#fb5d7c",
        "#e41e5a",
        "#ac1743",
        "#861333",
        "#650f26",
        "#450a19",
      ],
      "hue": 12,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e3effe",
        "#c9e1fd",
        "#a8d0fc",
        "#78b6fb",
        "#3497fa",
        "#1678d1",
        "#105a9d",
        "#0d457a",
        "#0a335c",
        "#06223f",
      ],
      "hue": 252,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.69:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 11.97:1, Lc 92",
    "10: 15.05:1, Lc 98",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [],
}
`;

exports[`golden palettes > fifteen steps, vivid, drifted 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7f6",
        "#ffeeeb",
        "#ffe1de",
        "#fed2cf",
        "#fec0bd",
        "#fea7a6",
        "#fe868a",
        "#fd5c6e",
        "#f91252",
        "#ce0f47",
        "#a90d3d",
        "#8d0c34",
        "#750a2d",
        "#5e0825",
        "#48051c",
      ],
      "hue": 17.6,
      "name": "primary",
      "seed": {
        "input": "#e11d48",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 575,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fef7f7",
        "#fbeeee",
        "#f2e5e5",
        "#e6dada",
        "#d9cccc",
        "#c8bbbb",
        "#b3a7a7",
        "#9e9292",
        "#887c7c",
        "#716666",
        "#5d5252",
        "#4e4444",
        "#413838",
        "#352b2b",
        "#281f1f",
      ],
      "hue": 17.6,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#e8ffe8",
        "#d2fdcf",
        "#b6f9af",
        "#94f384",
        "#75e853",
        "#5ed814",
        "#5dc011",
        "#58a70d",
        "#508e0a",
        "#467509",
        "#3b5f07",
        "#334e06",
        "#2c4005",
        "#233204",
        "#1a2503",
      ],
      "hue": 135,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff8f1",
        "#ffefe1",
        "#ffe3cc",
        "#fed5b3",
        "#fec395",
        "#feac6b",
        "#fe8d24",
        "#e4780e",
        "#c5640b",
        "#a65109",
        "#894108",
        "#743407",
        "#612a06",
        "#4f2004",
        "#3d1603",
      ],
      "hue": 55,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7f5",
        "#ffeeea",
        "#ffe2dd",
        "#fed2cc",
        "#fec0b8",
        "#fea8a0",
        "#fe8782",
        "#fd5e62",
        "#fa1241",
        "#d0103a",
        "#aa0d32",
        "#8e0c2c",
        "#760a26",
        "#5f081f",
        "#480517",
      ],
      "hue": 22.3,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f6f9ff",
        "#eaf2ff",
        "#dbe9ff",
        "#c8defe",
        "#b1d1fe",
        "#92c1fe",
        "#69adfd",
        "#2e97fd",
        "#0c81de",
        "#0a6cb5",
        "#085891",
        "#074977",
        "#063d61",
        "#05304c",
        "#032439",
      ],
      "hue": 252,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.06:1, Lc 0",
    "2: 1.16:1, Lc 0",
    "3: 1.29:1, Lc 9",
    "4: 1.47:1, Lc 15",
    "5: 1.76:1, Lc 23",
    "6: 2.20:1, Lc 34",
    "7: 2.85:1, Lc 44",
    "8: 3.80:1, Lc 54",
    "9: 5.21:1, Lc 65",
    "10: 7.04:1, Lc 74",
    "11: 8.88:1, Lc 81",
    "12: 10.75:1, Lc 88",
    "13: 12.90:1, Lc 94",
    "14: 15.13:1, Lc 98",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [
    "SEED_HARMONIZED",
    "SEMANTIC_NEAR_PRIMARY",
  ],
}
`;

exports[`golden palettes > five steps, muted 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#eefcf9",
        "#8de6d7",
        "#5da095",
        "#30544e",
        "#152522",
      ],
      "hue": 182.5,
      "name": "primary",
      "seed": {
        "input": "#14b8a6",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 500,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#effbf9",
        "#ccd9d6",
        "#8b9795",
        "#454f4d",
        "#1a2322",
      ],
      "hue": 182.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f0fcf6",
        "#8de8c1",
        "#5da285",
        "#305445",
        "#15251e",
      ],
      "hue": 165,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f1",
        "#eed39c",
        "#ac9158",
        "#5a4c2d",
        "#272113",
      ],
      "hue": 85,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f6",
        "#efd0c4",
        "#d77d59",
        "#71412e",
        "#321c14",
      ],
      "hue": 42,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f4fafc",
        "#b1dded",
        "#5d9db3",
        "#30525e",
        "#152429",
      ],
      "hue": 222,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.37:1, Lc 12",
    "2: 2.85:1, Lc 44",
    "3: 7.91:1, Lc 79",
    "4: 15.10:1, Lc 99",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [
    "SEED_HARMONIZED",
    "SEMANTIC_NEAR_PRIMARY",
  ],
}
`;

exports[`golden palettes > mid grey, exact 1`] = `
{
  "ramps": [
    {
      "broken": [
        "500: 2.712 < 3",
        "600: 3.9494 < 4.5",
        "700: 6.5847 < 7",
      ],
      "firstOnWhite": {
        "aa": 700,
        "aaLarge": 600,
        "aaa": 800,
      },
      "hexes": [
        "#f9f9f9",
        "#f2f2f2",
        "#e6e6e6",
        "#d5d5d5",
        "#bcbcbc",
        "#9d9d9d",
        "#808080 (seed)",
        "#5d5d5d",
        "#4a4a4a",
        "#363636",
        "#222222",
      ],
      "hue": null,
      "name": "primary",
      "seed": {
        "input": "#808080",
        "magnitude": "noticeable",
        "mode": "exact",
        "slot": 600,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b2b2b2",
        "#949494",
        "#767676",
        "#585858",
        "#444444",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eafeed",
        "#cbf9d3",
        "#9df2af",
        "#65e488",
        "#26cc65",
        "#1eaa53",
        "#178841",
        "#116630",
        "#0e4e24",
        "#0b3b1b",
        "#072711",
      ],
      "hue": 150,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b1",
        "#fcc17b",
        "#f4a023",
        "#cc851b",
        "#a36a15",
        "#7b4f0f",
        "#5f3d0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbdb4",
        "#fc978c",
        "#fb6157",
        "#e71f25",
        "#af181b",
        "#881415",
        "#66100f",
        "#470a09",
      ],
      "hue": 27,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fafe",
        "#ddf1fe",
        "#bee4fd",
        "#94d4fc",
        "#4cbcfb",
        "#1e9edc",
        "#177eb0",
        "#115e84",
        "#0e4866",
        "#0b364d",
        "#072434",
      ],
      "hue": 237,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.51:1, Lc 16",
    "4: 2.00:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.29:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 12.02:1, Lc 92",
    "10: 15.09:1, Lc 98",
  ],
  "suggestions": [],
  "warnings": [
    "GUARANTEE_NOT_MET",
    "NO_HUE",
    "SEED_WARP_STRAIN",
  ],
}
`;

exports[`golden palettes > out of gamut input 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfdeb",
        "#d1f8cd",
        "#aaf0a4",
        "#7ee277",
        "#26ce22",
        "#1eac1a",
        "#178914",
        "#11670f",
        "#0e4f0c",
        "#0b3b09",
        "#072806",
      ],
      "hue": 142.5,
      "name": "primary",
      "seed": {
        "input": "#00ff00",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 200,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fbf2",
        "#e8f0e7",
        "#d9e1d9",
        "#c7cec6",
        "#adb4ac",
        "#8f968f",
        "#717870",
        "#545a53",
        "#3f463f",
        "#2e342e",
        "#1e231d",
      ],
      "hue": 142.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#ebfeec",
        "#cef9d0",
        "#a3f1a9",
        "#72e380",
        "#26cd4e",
        "#1eab3f",
        "#178831",
        "#116624",
        "#0e4f1b",
        "#0b3b14",
        "#07280c",
      ],
      "hue": 146.2,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8ec",
        "#feecc8",
        "#fddb94",
        "#fcc437",
        "#deaa23",
        "#ba8e1b",
        "#947114",
        "#6f540f",
        "#56410c",
        "#403009",
        "#2b2006",
      ],
      "hue": 85,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae2",
        "#fdd7c8",
        "#fdbea6",
        "#fc9972",
        "#fa651b",
        "#c85015",
        "#973c10",
        "#752e0d",
        "#58220a",
        "#3c1606",
      ],
      "hue": 42,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f0fafe",
        "#d5f3fe",
        "#ade8fd",
        "#70d9fc",
        "#27c1eb",
        "#1ea1c4",
        "#17809d",
        "#126076",
        "#0e4a5b",
        "#0b3744",
        "#07252e",
      ],
      "hue": 222,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 2.00:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.29:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.20:1, Lc 84",
    "9: 12.04:1, Lc 92",
    "10: 15.09:1, Lc 99",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [
    "SEED_CLIPPED",
    "SEED_HARMONIZED",
    "SEMANTIC_NEAR_PRIMARY",
  ],
}
`;

exports[`golden palettes > pure blue 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e6eefe",
        "#d1e0fd",
        "#b5cdfc",
        "#8eb2fb",
        "#6291fa",
        "#336cf8",
        "#063ef0",
        "#0531ba",
        "#04258c",
        "#031961",
      ],
      "hue": 264.1,
      "name": "primary",
      "seed": {
        "input": "#0000ff",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 800,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e9eef8",
        "#dadfe9",
        "#c7ccd6",
        "#aeb2bc",
        "#90959e",
        "#72767f",
        "#545860",
        "#40444c",
        "#2f333a",
        "#1e2229",
      ],
      "hue": 264.1,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#e6fef3",
        "#bffbdf",
        "#83f4c6",
        "#30e6ab",
        "#27c995",
        "#1ea87c",
        "#178662",
        "#126449",
        "#0e4d38",
        "#0b3a29",
        "#07271b",
      ],
      "hue": 165,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f3",
        "#feeade",
        "#fdd8bf",
        "#fcbf96",
        "#fc9b53",
        "#e1791b",
        "#b46015",
        "#884710",
        "#69370d",
        "#4f2909",
        "#361b06",
      ],
      "hue": 55,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd5d9",
        "#fdbbc2",
        "#fc94a2",
        "#fb5d7c",
        "#e41e5a",
        "#ac1743",
        "#861333",
        "#650f26",
        "#450a19",
      ],
      "hue": 12,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e2effe",
        "#c9e2fd",
        "#a7d0fc",
        "#75b7fb",
        "#2a98fa",
        "#1679cc",
        "#115a9a",
        "#0d4677",
        "#0a345a",
        "#06233d",
      ],
      "hue": 250.5,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.28:1, Lc 59",
    "7: 6.70:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 11.98:1, Lc 92",
    "10: 15.05:1, Lc 98",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [
    "SEED_HARMONIZED",
    "SEMANTIC_NEAR_PRIMARY",
  ],
}
`;

exports[`golden palettes > pure yellow 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9fae4",
        "#eff2bb",
        "#e2e580",
        "#d2d32c",
        "#b8b822",
        "#99991a",
        "#7a7a14",
        "#5b5b0f",
        "#46460c",
        "#343409",
        "#232306",
      ],
      "hue": 109.8,
      "name": "primary",
      "seed": {
        "input": "#ffff00",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 50,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9faef",
        "#eeefe4",
        "#dfe0d5",
        "#cccdc2",
        "#b2b3a9",
        "#95958c",
        "#76776e",
        "#585950",
        "#44443c",
        "#33332b",
        "#22221a",
      ],
      "hue": 109.8,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#effde9",
        "#d8f7c8",
        "#b8ee9a",
        "#94df66",
        "#6ec822",
        "#5ba71a",
        "#478514",
        "#35640f",
        "#284d0c",
        "#1d3909",
        "#132606",
      ],
      "hue": 135,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8ec",
        "#feecc8",
        "#fddb94",
        "#fcc437",
        "#deaa23",
        "#ba8e1b",
        "#947114",
        "#6f540f",
        "#56410c",
        "#403009",
        "#2b2006",
      ],
      "hue": 85,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae2",
        "#fdd7c8",
        "#fdbea6",
        "#fc9972",
        "#fa651b",
        "#c85015",
        "#973c10",
        "#752e0d",
        "#58220a",
        "#3c1606",
      ],
      "hue": 42,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f0fafe",
        "#d5f3fe",
        "#ade8fd",
        "#70d9fc",
        "#27c1eb",
        "#1ea1c4",
        "#17809d",
        "#126076",
        "#0e4a5b",
        "#0b3744",
        "#07252e",
      ],
      "hue": 222,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.51:1, Lc 16",
    "4: 2.00:1, Lc 30",
    "5: 2.85:1, Lc 44",
    "6: 4.29:1, Lc 59",
    "7: 6.67:1, Lc 73",
    "8: 9.20:1, Lc 84",
    "9: 12.04:1, Lc 92",
    "10: 15.08:1, Lc 99",
  ],
  "suggestions": [
    "complementary @ 1",
    "analogous @ 1",
    "triadic @ 1",
    "split-complementary @ 1",
    "tetradic @ 1",
  ],
  "warnings": [
    "SEED_AT_RAMP_END",
    "SEED_HARMONIZED",
    "SEMANTIC_NEAR_PRIMARY",
  ],
}
`;

exports[`golden palettes > two seeds with auto harmony 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#eaedfe",
        "#d8ddfd",
        "#c2c9fc",
        "#a4adfb",
        "#838afa",
        "#6561f8",
        "#4f29f4",
        "#3d1cc2",
        "#2d1793",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "primary",
      "seed": {
        "input": "#635bff",
        "magnitude": "subtle",
        "mode": "harmonize",
        "slot": 600,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b0",
        "#fcc17b",
        "#f4a023",
        "#cc851b",
        "#a36a15",
        "#7b4f0f",
        "#5f3d0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70.1,
      "name": "secondary",
      "seed": {
        "input": "#f59e0b",
        "magnitude": "subtle",
        "mode": "harmonize",
        "slot": 400,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f2fce7",
        "#def6c4",
        "#c4ec91",
        "#a7dc57",
        "#8ac322",
        "#73a31a",
        "#5b8214",
        "#43610f",
        "#344b0c",
        "#263809",
        "#192506",
      ],
      "hue": 128.3,
      "name": "split-complementary-1",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddee9",
        "#cacbd6",
        "#b0b2bc",
        "#92949e",
        "#74767f",
        "#565860",
        "#42434c",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#e6fef3",
        "#bffbdf",
        "#83f4c6",
        "#30e6ab",
        "#27c995",
        "#1ea87c",
        "#178662",
        "#126449",
        "#0e4d38",
        "#0b3a29",
        "#07271b",
      ],
      "hue": 165,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f3",
        "#feeade",
        "#fdd8bf",
        "#fcbf96",
        "#fc9b53",
        "#e1791b",
        "#b46015",
        "#884710",
        "#69370d",
        "#4f2909",
        "#361b06",
      ],
      "hue": 55,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd5d9",
        "#fdbbc2",
        "#fc94a2",
        "#fb5d7c",
        "#e41e5a",
        "#ac1743",
        "#861333",
        "#650f26",
        "#450a19",
      ],
      "hue": 12,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e3effe",
        "#c9e1fd",
        "#a8d0fc",
        "#78b6fb",
        "#3497fa",
        "#1678d1",
        "#105a9d",
        "#0d457a",
        "#0a335c",
        "#06223f",
      ],
      "hue": 252,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.52:1, Lc 16",
    "4: 1.99:1, Lc 29",
    "5: 2.84:1, Lc 44",
    "6: 4.27:1, Lc 59",
    "7: 6.69:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 11.97:1, Lc 92",
    "10: 15.05:1, Lc 98",
  ],
  "suggestions": [
    "analogous @ 0",
    "split-complementary @ 0.5",
  ],
  "warnings": [],
}
`;

exports[`golden palettes > white, exact 1`] = `
{
  "ramps": [
    {
      "broken": [
        "500: 2.9953 < 3",
      ],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 600,
        "aaa": 700,
      },
      "hexes": [
        "#ffffff (seed)",
        "#f3f3f3",
        "#e4e4e4",
        "#d0d0d0",
        "#b6b6b6",
        "#959595",
        "#767676",
        "#595959",
        "#454545",
        "#333333",
        "#222222",
      ],
      "hue": null,
      "name": "primary",
      "seed": {
        "input": "#ffffff",
        "magnitude": "subtle",
        "mode": "exact",
        "slot": 50,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b2b2b2",
        "#949494",
        "#767676",
        "#585858",
        "#444444",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eafeed",
        "#cbf9d3",
        "#9df2af",
        "#65e488",
        "#26cc65",
        "#1eaa53",
        "#178841",
        "#116630",
        "#0e4e24",
        "#0b3b1b",
        "#072711",
      ],
      "hue": 150,
      "name": "success",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b1",
        "#fcc17b",
        "#f4a023",
        "#cc851b",
        "#a36a15",
        "#7b4f0f",
        "#5f3d0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70,
      "name": "warning",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbdb4",
        "#fc978c",
        "#fb6157",
        "#e71f25",
        "#af181b",
        "#881415",
        "#66100f",
        "#470a09",
      ],
      "hue": 27,
      "name": "danger",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fafe",
        "#ddf1fe",
        "#bee4fd",
        "#94d4fc",
        "#4cbcfb",
        "#1e9edc",
        "#177eb0",
        "#115e84",
        "#0e4866",
        "#0b364d",
        "#072434",
      ],
      "hue": 237,
      "name": "info",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 8",
    "3: 1.51:1, Lc 16",
    "4: 2.00:1, Lc 29",
    "5: 2.85:1, Lc 44",
    "6: 4.29:1, Lc 59",
    "7: 6.68:1, Lc 73",
    "8: 9.20:1, Lc 83",
    "9: 12.02:1, Lc 92",
    "10: 15.09:1, Lc 98",
  ],
  "suggestions": [],
  "warnings": [
    "GUARANTEE_NOT_MET",
    "NO_HUE",
    "SEED_AT_RAMP_END",
    "SEED_WARP_STRAIN",
  ],
}
`;
